force-app/main/default/objects/Welcome_Call_Questionnaire_Setup__c/Welcome_Call_Questionnaire_Setup__c.object-meta.xml
<CustomObject>
    <label>Welcome Call Questionnaire Setup</label>
    <nameField>
        <displayFormat>WCQ-SETUP-{0000}</displayFormat>
        <label>Welcome Call Questionnaire Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>