force-app/main/default/objects/Welcome_Call_Questionnaire_Setup__c/fields/Car_Type__c.field-meta.xml
<CustomField>
    <fullName>Car_Type__c</fullName>
    <label>Car Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRACTOR</fullName>
                <label>TRACTOR (รถแทรกเตอร์)</label>
            </value>
            <value>
                <fullName>COMBINE HARVESTER</fullName>
                <label>COMBINE HARVESTER (รถเกี่ยวข้าว)</label>
            </value>
            <value>
                <fullName>RICE TRANSPLANTER</fullName>
                <label>RICE TRANSPLANTER (รถดำนา)</label>
            </value>
            <value>
                <fullName>MINI EXCAVATOR</fullName>
                <label>MINI EXCAVATOR (รถขุด)</label>
            </value>
            <value>
                <fullName>SUGARCANE HARVESTER</fullName>
                <label>SUGARCANE HARVESTER (รถตัดอ้อย)</label>
            </value>
            <value>
                <fullName>DRONE</fullName>
            </value>
            <value>
                <fullName>VEGETABLE PLANT</fullName>
            </value>
            <value>
                <fullName>VEGETABLE PLANTER</fullName>
            </value>
            <value>
                <fullName>COMBINE_HARVESTER_Resolve</fullName>
                <isActive>false</isActive>
                <label>COMBINE HARVESTER (Resolve)</label>
            </value>
            <value>
                <fullName>DRONE_Resolve</fullName>
                <isActive>false</isActive>
                <label>DRONE (Resolve)</label>
            </value>
            <value>
                <fullName>MINI_EXCAVATOR_Resolve</fullName>
                <isActive>false</isActive>
                <label>MINI EXCAVATOR (Resolve)</label>
            </value>
            <value>
                <fullName>RICE_TRANSPLANTER_Resolve</fullName>
                <isActive>false</isActive>
                <label>RICE TRANSPLANTER (Resolve)</label>
            </value>
            <value>
                <fullName>SUGARCANE_HARVESTER_Resolve</fullName>
                <isActive>false</isActive>
                <label>SUGARCANE HARVESTER (Resolve)</label>
            </value>
            <value>
                <fullName>TRACTOR_Resolve</fullName>
                <isActive>false</isActive>
                <label>TRACTOR (Resolve)</label>
            </value>
            <value>
                <fullName>VEGATABLE_PLANT_Resolve</fullName>
                <isActive>false</isActive>
                <label>VEGATABLE PLANT (Resolve)</label>
            </value>
            <value>
                <fullName>WelcomeCall_Oversea</fullName>
                <isActive>false</isActive>
                <label>WelcomeCall Oversea</label>
            </value>
            <value>
                <fullName>WelcomeCall_Oversea_Resolve</fullName>
                <isActive>false</isActive>
                <label>WelcomeCall Oversea (Resolve)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>