force-app/main/default/objects/Welcome_Call_Questionnaire_Setup__c/fields/Full_Field__c.field-meta.xml
<CustomField>
    <fullName>Full_Field__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Full Field</label>
    <type>Checkbox</type>
</CustomField>