force-app/main/default/objects/Welcome_Call_Questionnaire_Setup__c/fields/Questionnaire_Label__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Label__c</fullName>
    <formula>Welcome_Call_Questionnaire__r.Questionnaire_Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Questionnaire Label</label>
    <type>Text</type>
</CustomField>