force-app/main/default/objects/Welcome_Call_Questionnaire_Setup__c/fields/Welcome_Call_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Call_Questionnaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Welcome Call Questionnaire</label>
    <referenceTo>Welcome_Call_Questionnaire__c</referenceTo>
    <relationshipLabel>Welcome Call Questionnaire Setup</relationshipLabel>
    <relationshipName>Welcome_Call_Questionnaire_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>