force-app/main/default/objects/Welcome_Call_Questionnaire_Setup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>Car_Type__c</columns>
    <columns>Section_Name__c</columns>
    <columns>Welcome_Call_Questionnaire__c</columns>
    <columns>Questionnaire_Label__c</columns>
    <columns>Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>