force-app/main/default/objects/Welcome_Call_Questionnaire_Setup__c/listViews/COMBINE_HARVESTER_LA.listView-meta.xml
<ListView>
    <fullName>COMBINE_HARVESTER_LA</fullName>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>Car_Type__c</columns>
    <columns>Section_Name__c</columns>
    <columns>Welcome_Call_Questionnaire__c</columns>
    <columns>Questionnaire_Label__c</columns>
    <columns>Sequence__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Car_Type__c</field>
        <operation>equals</operation>
        <value>COMBINE HARVESTER</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>LA</value>
    </filters>
    <label>COMBINE HARVESTER LA</label>
</ListView>