force-app/main/default/objects/Welcome_Call_Questionnaire_Setup__c/listViews/MINI_EXCAVATOR_TH.listView-meta.xml
<ListView>
    <fullName>MINI_EXCAVATOR_TH</fullName>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>Car_Type__c</columns>
    <columns>Section_Name__c</columns>
    <columns>Welcome_Call_Questionnaire__c</columns>
    <columns>Questionnaire_Label__c</columns>
    <columns>Sequence__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Car_Type__c</field>
        <operation>equals</operation>
        <value>MINI EXCAVATOR</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>TH</value>
    </filters>
    <label>MINI EXCAVATOR TH</label>
</ListView>