force-app/main/default/objects/Welcome_Call_Questionnaire_Setup__c/listViews/RICE_TRANSPLANTER_KH.listView-meta.xml
<ListView>
    <fullName>RICE_TRANSPLANTER_KH</fullName>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>Car_Type__c</columns>
    <columns>Section_Name__c</columns>
    <columns>Welcome_Call_Questionnaire__c</columns>
    <columns>Questionnaire_Label__c</columns>
    <columns>Sequence__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Car_Type__c</field>
        <operation>equals</operation>
        <value>RICE TRANSPLANTER</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>KH</value>
    </filters>
    <label>RICE TRANSPLANTER KH</label>
</ListView>